--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Self de uma class\r\n",
-    "\r\n",
+    "# Self de uma class\n",
+    "\n",
     "Self é a referência que sabe encontrar o objeto construído em memória."
    ]
   },
@@ -52,13 +52,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Atributos de uma class\r\n",
-    "Os atributos são as características que especificam uma classe. Estão na função especial \\_\\_init__ e fora dela.\r\n",
-    "\r\n",
-    "A função construtora \\_\\_init__ é uma implícita, que é chamada automaticamente.\r\n",
-    "\r\n",
-    "## Atributos da instancia(objeto) Vs atributos da classe\r\n",
-    "\r\n",
+    "# Atributos de uma class\n",
+    "Os atributos são as características que especificam uma classe. Estão na função especial \\_\\_init__ e fora dela.\n",
+    "\n",
+    "A função construtora \\_\\_init__ é uma implícita, que é chamada automaticamente.\n",
+    "\n",
+    "## Atributos da instancia(objeto) Vs atributos da classe\n",
+    "\n",
     "Atributos da instancia estão na função construtora \\_\\_init__ ja os atributos da classe estão na classe."
    ]
   },
@@ -98,10 +98,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Atributos __privados (encapsulamento) - self.__numero: int = numero\r\n",
-    "\r\n",
-    "Não podemos acessar o atributo privado diretamente. Teremos que usar os métodos responsáveis por encapsular o acesso ao objeto. \r\n",
-    "\r\n",
+    "## Atributos __privados (encapsulamento) - self.__numero: int = numero\n",
+    "\n",
+    "Não podemos acessar o atributo privado diretamente. Teremos que usar os métodos responsáveis por encapsular o acesso ao objeto. \n",
+    "\n",
     "Para tornar um atributo privado adicionanmos dois caracteres underscore (__) a esquerda. A ação de tornar privado o acesso aos atributos, no mundo Orientado a Objetos, chamamos de encapsulamento."
    ]
   },
@@ -140,11 +140,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Acessando atributos __privados com métodos getters - @property\r\n",
-    "O uso do getters são métodos usados apenas para retornar dados de atributos __privados.\r\n",
-    "\r\n",
-    "Uma solução ao invés de usar get e set no nome das variaveis é usar uma property, A declaração de uma property é feita com o uso do caractere @. @property para getters e @nome da função.setter para setters.\r\n",
-    "\r\n",
+    "## Acessando atributos __privados com métodos getters - @property\n",
+    "O uso do getters são métodos usados apenas para retornar dados de atributos __privados.\n",
+    "\n",
+    "Uma solução ao invés de usar get e set no nome das variaveis é usar uma property, A declaração de uma property é feita com o uso do caractere @. @property para getters e @nome da função.setter para setters.\n",
+    "\n",
     "Obs: Usar property é uma ótima prática. Quando criamos getters e setters todos os lugares que já acessam a classe precisam mudar."
    ]
   },
@@ -189,12 +189,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modificando atributos __privados com métodos setters - @numero.setter\r\n",
-    "\r\n",
-    "O uso do setters são métodos usados para modificar os dados de atributos __privados.\r\n",
-    "\r\n",
-    "Uma solução ao invés de usar get e set no nome das variaveis é usar uma property, A declaração de uma property é feita com o uso do caractere @. @property para getters e @nome da função.setter para setters.\r\n",
-    "\r\n",
+    "## Modificando atributos __privados com métodos setters - @numero.setter\n",
+    "\n",
+    "O uso do setters são métodos usados para modificar os dados de atributos __privados.\n",
+    "\n",
+    "Uma solução ao invés de usar get e set no nome das variaveis é usar uma property, A declaração de uma property é feita com o uso do caractere @. @property para getters e @nome da função.setter para setters.\n",
+    "\n",
     "Obs: Usar property é uma ótima prática. Quando criamos getters e setters todos os lugares que já acessam a classe precisam mudar."
    ]
   },
@@ -240,16 +240,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Métodos estáticos de uma class - @staticmethod\r\n",
-    "\r\n",
-    "Todas as linguagens orientadas a objeto trabalham com métodos estáticos, fica inapropriado usar property, porque ele sempre precisa do self. A configuração correta será @staticmethod.\r\n",
-    "\r\n",
-    "Métodos estáticos tem um cheiro de linguagem procedural já que independe de um objeto para ser chamado e não manipula informações/atributos de objetos. Deve ser usado com bastante cautela!\r\n",
-    "\r\n",
-    "Cuidados a tomar...\r\n",
-    "\r\n",
-    "Sempre que você usar métodos estáticos em classes que contém herança, observe se não está tentando acessar alguma informação da classe a partir do método estático, pois isso pode dar algumas dores de cabeça pra entender o motivo dos problemas.\r\n",
-    "\r\n",
+    "# Métodos estáticos de uma class - @staticmethod\n",
+    "\n",
+    "Todas as linguagens orientadas a objeto trabalham com métodos estáticos, fica inapropriado usar property, porque ele sempre precisa do self. A configuração correta será @staticmethod.\n",
+    "\n",
+    "Métodos estáticos tem um cheiro de linguagem procedural já que independe de um objeto para ser chamado e não manipula informações/atributos de objetos. Deve ser usado com bastante cautela!\n",
+    "\n",
+    "Cuidados a tomar...\n",
+    "\n",
+    "Sempre que você usar métodos estáticos em classes que contém herança, observe se não está tentando acessar alguma informação da classe a partir do método estático, pois isso pode dar algumas dores de cabeça pra entender o motivo dos problemas.\n",
+    "\n",
     "Alguns pythonistas não aconselham o uso do @staticmethod, já que poderia ser substituído por uma simples função no corpo do módulo. Outros mais puristas entendem que os métodos estáticos fazem sentido, sim, e que devem ser vistos como responsabilidade das classes."
    ]
   },
@@ -297,10 +297,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Métodos de classe de uma class - @classmethod\r\n",
-    "\r\n",
-    "São métodos declarados com @classmethod. Quando criamos um método de classe, temos acesso aos atributos da classe. Da mesma forma com os atributos de classe, podemos acessar estes métodos de dentro dos métodos de instância, a partir de ____class____, se desejarmos.\r\n",
-    "\r\n",
+    "# Métodos de classe de uma class - @classmethod\n",
+    "\n",
+    "São métodos declarados com @classmethod. Quando criamos um método de classe, temos acesso aos atributos da classe. Da mesma forma com os atributos de classe, podemos acessar estes métodos de dentro dos métodos de instância, a partir de ____class____, se desejarmos.\n",
+    "\n",
     "O @classmethod permite que você chame o metodo de uma classe sem precisar instânciar a classe."
    ]
   },
@@ -348,12 +348,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## staticmethod vs classmethod vs self\r\n",
-    "\r\n",
-    "O staticmethod não recebe a classe como referência enquanto o classmethod recebe.\r\n",
-    "\r\n",
-    "Podemos usar o classmethod como construtor da nossa classe, recebendo um objeto de outra classe ou até da mesma no staticmethod não.\r\n",
-    "\r\n",
+    "## staticmethod vs classmethod vs self\n",
+    "\n",
+    "O staticmethod não recebe a classe como referência enquanto o classmethod recebe.\n",
+    "\n",
+    "Podemos usar o classmethod como construtor da nossa classe, recebendo um objeto de outra classe ou até da mesma no staticmethod não.\n",
+    "\n",
     "Outra coisa é que o uso do @classmethod é mais útil quando usado em herança, já que a classe é levada em consideração. Alguns programadores questionam o uso do @staticmethod (por parecer não ter muita utilidade) e por este motivo é mais comum o uso do @classmethod."
    ]
   },
@@ -394,7 +394,7 @@
     "instancia = Teste('Ana')\n",
     "instancia.test_self()\n",
     "\n",
-    "# staticmethod, não precisamos estanciar, mas não conseguimos acessar nenhum objeto da classe.\n",
+    "# staticmethod, não precisamos instanciar, mas não conseguimos acessar nenhum objeto da classe.\n",
     "Teste.static_method()\n",
     "\n",
     "# classmethod, não precisamos estanciar, e conseguimos acessar objetos da classe.\n",
@@ -405,8 +405,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ex: artributos e métodos da class Vs atributos e métodos da instancia\r\n",
-    "\r\n",
+    "## Ex: artributos e métodos da class Vs atributos e métodos da instancia\n",
+    "\n",
     "Em resumo, atributo e método da classe são unicos e podem ser acessados sem instanciar objetos. Qualquer objeto instanciado tem acesso a atributos e métodos da classe mas do contrário não é verdade. Um atributo e método da classe não tem acesso a atributos e métodos da instancia. "
    ]
   },
@@ -469,7 +469,7 @@
     }
    ],
    "source": [
-    "# para chamar stributos e métodos da instancia tenho que instanciar:\n",
+    "# para chamar atributos e métodos da instancia tenho que instanciar:\n",
     "banco = Fila() #instanciando fila de banco\n",
     "print(f's_fila = {banco.s_fila}')\n",
     "banco.s_entrar('João')"
@@ -490,7 +490,8 @@
     }
    ],
    "source": [
-    "# posso acessar c_fila(atributo da class) com instancia banco, porem são duas filas diferentes, uma fila é da class e outra é da instancia. Qualquer fila de instancia tem acesso a fila da class.\n",
+    "# posso acessar c_fila(atributo da class) com instancia banco, porem são duas filas diferentes, uma fila é da class e \n",
+    "# outra é da instancia. Qualquer fila de instancia tem acesso a fila da class.\n",
     "print(f'c_fila = {banco.c_fila}')\n",
     "print(f's_fila = {banco.s_fila}')"
    ]
@@ -511,7 +512,7 @@
     }
    ],
    "source": [
-    "# posso acionar um médodo da class pela instancia:\n",
+    "# posso acionar um método da class pela instancia:\n",
     "banco.c_entrar('Maria')\n",
     "print(f'c_fila = {banco.c_fila}')\n",
     "print(f's_fila = {banco.s_fila}')\n",
@@ -556,8 +557,9 @@
     }
    ],
    "source": [
-    "# se instanciarmos outro objeto, ex: fila de supermercado. A mesma tera uma fila individual, mas terá acesso a atributo da classe igual a fila de banco.abs\n",
-    "supermercado = Fila() #instanciando fila de supermercado\n",
+    "# se instanciarmos outro objeto, ex: fila de supermercado. A mesma tera uma fila individual, mas terá acesso a atributo da\n",
+    "# classe igual a fila de banco.abs\n",
+    "supermercado = Fila() # instanciando fila de supermercado\n",
     "print(f's_fila = {supermercado.s_fila}')\n",
     "supermercado.s_entrar('Jony')\n",
     "print(f'c_fila = {supermercado.c_fila}') # supermercado também tem acesso ao atributo da classe c_fila"
@@ -607,23 +609,31 @@
    "outputs": [],
    "source": [
     "class Pizza:\n",
-    "# atributo da class, uma pizza tem 8 pedaços, não importa o sabor, tem 8 pedaços e pronto. Qualquer sabor que instanciar terá 8 pedaços, por isso usamos este atributo de class.\n",
+    "# atributo da class, uma pizza tem 8 pedaços, não importa o sabor, tem 8 pedaços e pronto. Qualquer sabor\n",
+    "# que instanciar terá 8 pedaços, por isso usamos este atributo de class.\n",
     "    pedaços = 8 \n",
     "\n",
     "# agora sabor ja se trata de instancia, temos que colocar com self, pois cada sabor é um sabor.\n",
     "    def __init__(self, sabor):\n",
     "        self.sabor = sabor\n",
     "\n",
-    "# mesma coisa no método de instancia pegar pedaço, uma pizza sempre irá iniar com um tamanho padrão, se você comprou uma pizza de 8 pedaços ela tera 8 pedaços, ao comer um pedaço, você esta mudando a caracteristica da pizza de um sabor especifico que você comeu e não todas as pizzas do mundo, por isso este método é um método de instancia.\n",
+    "# mesma coisa no método de instancia pegar pedaço, uma pizza sempre irá iniciar com um tamanho padrão, se você comprou\n",
+    "# uma pizza de 8 pedaços ela tera 8 pedaços, ao comer um pedaço, você esta mudando a caracteristica da pizza de um\n",
+    "# sabor especifico que você comeu e não todas as pizzas do mundo, por isso este método é um método de instancia.\n",
     "    def pegar_pedaço(self):\n",
     "        self.pedaços -= 1\n",
     "\n",
-    "# mas e se quisermos mudar o tamanho da pizza, ex: pizza brotinho de 4 pedaços, podemos colocar um método de classe, porque isso em si não interfere no sabor da pizza, não importa qual sabor a pizza ser, mas uma pizza de 4 pedaços sempre terá 4 pedaços!!! \n",
+    "# mas e se quisermos mudar o tamanho da pizza, ex: pizza brotinho de 4 pedaços, podemos colocar um método de classe,\n",
+    "# porque isso em si não interfere no sabor da pizza, não importa qual sabor a pizza ser, mas uma pizza de 4 pedaços\n",
+    "# sempre terá 4 pedaços!!! \n",
     "    @classmethod\n",
     "    def mudar_tamanho(cls, pedaços: int = 1) -> None: \n",
     "        cls.pedaços = pedaços\n",
     "\n",
-    "# sabemos que toda pizza independente do tamanho ou do sabor tem igredientes, não estamos especificando aqui quais ingredientes. Simplesmente sabemos que uma pizza possui igredientes e pronto! Ou seja, igredientes não precisa conversar com a class (pizza) nem com instancia (sabor), simplesmente qualquer que seja o tamanho da pizza ou o sabor temos que ter ingredientes. Este é o conceito do staticmethod.\n",
+    "# sabemos que toda pizza independente do tamanho ou do sabor tem ingredientes, não estamos especificando aqui quais\n",
+    "# ingredientes. Simplesmente sabemos que uma pizza possui ingredientes e pronto! Ou seja, ingredientes não precisa\n",
+    "# conversar com a class (pizza) nem com instancia (sabor), simplesmente qualquer que seja o tamanho da pizza ou o\n",
+    "# sabor temos que ter ingredientes. Este é o conceito do staticmethod.\n",
     "    @staticmethod\n",
     "    def ingredientes(ingredientes: list = ['ingredientes']) -> list:\n",
     "        return print(ingredientes)"
@@ -859,8 +869,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Herança\r\n",
-    "\r\n",
+    "## Herança\n",
+    "\n",
     "Herança compartilha codigo com as classes filhas reduzindo a repetição de codigo. Todas as subclasses tem acesso aos métodos criados na superclasse e a herança faz com que o seu código não fique duplicado, reduzindo os pontos de falha."
    ]
   },
@@ -989,8 +999,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Polimorfismo\r\n",
-    "\r\n",
+    "# Polimorfismo\n",
+    "\n",
     "Polimorfismo é quando não importa a classe sendo usada, contanto que esta classe herde de uma superclasse específica. Não precisamos mais verificar o tipo da classe para acessar métodos."
    ]
   },
@@ -1064,10 +1074,10 @@
     }
    ],
    "source": [
-    "def myFun(*args):\r\n",
-    "\tfor arg in args:\r\n",
-    "\t\tprint(arg)\r\n",
-    "\r\n",
+    "def myFun(*args):\n",
+    "\tfor arg in args:\n",
+    "\t\tprint(arg)\n",
+    "\n",
     "myFun('Hello', 'Welcome', 'to', 'GeeksforGeeks')"
    ]
   },
@@ -1095,11 +1105,11 @@
     }
    ],
    "source": [
-    "def myFun(arg1, *args):\r\n",
-    "\tprint(\"Meu primeiro argumento:\", arg1)\r\n",
-    "\tfor arg in args:\r\n",
-    "\t\tprint(\"Proximo argumento *args:\", arg)\r\n",
-    "\r\n",
+    "def myFun(arg1, *args):\n",
+    "\tprint(\"Meu primeiro argumento:\", arg1)\n",
+    "\tfor arg in args:\n",
+    "\t\tprint(\"Proximo argumento *args:\", arg)\n",
+    "\n",
     "myFun('Hello', 'Welcome', 'to', 'GeeksforGeeks')"
    ]
   },
@@ -1126,10 +1136,10 @@
     }
    ],
    "source": [
-    "def myFun(**kwargs):\r\n",
-    "\tfor key, value in kwargs.items():\r\n",
-    "\t\tprint(f'{key=} : {value=}')\r\n",
-    "\r\n",
+    "def myFun(**kwargs):\n",
+    "\tfor key, value in kwargs.items():\n",
+    "\t\tprint(f'{key=} : {value=}')\n",
+    "\n",
     "myFun(first ='Geeks', mid ='for', last='Geeks')"
    ]
   },
@@ -1157,11 +1167,11 @@
     }
    ],
    "source": [
-    "def myFun(arg1, **kwargs):\r\n",
-    "    print(\"Meu primeiro argumento:\", arg1)\r\n",
-    "    for key, value in kwargs.items():\r\n",
-    "        print(f'{key=} : {value=}')\r\n",
-    "\r\n",
+    "def myFun(arg1, **kwargs):\n",
+    "    print(\"Meu primeiro argumento:\", arg1)\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(f'{key=} : {value=}')\n",
+    "\n",
     "myFun(\"Hi\", first ='Geeks', mid ='for', last='Geeks')"
    ]
   },
@@ -1191,17 +1201,17 @@
     }
    ],
    "source": [
-    "def myFun(arg1, arg2, arg3):\r\n",
-    "\tprint(\"arg1:\", arg1)\r\n",
-    "\tprint(\"arg2:\", arg2)\r\n",
-    "\tprint(\"arg3:\", arg3)\r\n",
-    "\t\r\n",
-    "# Chamando a função com *args\r\n",
-    "args = (\"Geeks\", \"for\", \"Geeks\")\r\n",
-    "myFun(*args)\r\n",
-    "\r\n",
-    "# Chamando a função com *kwargs - irá printar somente value\r\n",
-    "kwargs = {\"arg1\" : \"Geeks K\", \"arg2\" : \"for K\", \"arg3\" : \"Geeks K\"}\r\n",
+    "def myFun(arg1, arg2, arg3):\n",
+    "\tprint(\"arg1:\", arg1)\n",
+    "\tprint(\"arg2:\", arg2)\n",
+    "\tprint(\"arg3:\", arg3)\n",
+    "\t\n",
+    "# Chamando a função com *args\n",
+    "args = (\"Geeks\", \"for\", \"Geeks\")\n",
+    "myFun(*args)\n",
+    "\n",
+    "# Chamando a função com *kwargs - irá printar somente value\n",
+    "kwargs = {\"arg1\" : \"Geeks K\", \"arg2\" : \"for K\", \"arg3\" : \"Geeks K\"}\n",
     "myFun(**kwargs)"
    ]
   },
@@ -1227,10 +1237,10 @@
     }
    ],
    "source": [
-    "def myFun(*args,**kwargs):\r\n",
-    "\tprint(\"args: \", args)\r\n",
-    "\tprint(\"kwargs: \", kwargs)\r\n",
-    "\r\n",
+    "def myFun(*args,**kwargs):\n",
+    "\tprint(\"args: \", args)\n",
+    "\tprint(\"kwargs: \", kwargs)\n",
+    "\n",
     "myFun('geeks','for','geeks', first=\"Geeks K\", mid=\"for K\", last=\"Geeks K\")"
    ]
   }
