add explicação de compreensões de lista aninhada

--- a/Coleções_Python_Iteraveis/Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/Comprehensions.ipynb
@@ -252,7 +252,32 @@
    "source": [
     "# List Comprehensions _**ANINHADAS**_\n",
     "\n",
-    "É possível escrever compreensões de lista aninhada, o que significa que você pode incluir uma compreensão de lista dentro de outra. Um dos usos das compreensões de lista aninhada é que elas podem ser usadas para criar matrizes n-dimensionais. "
+    "É possível escrever compreensões de lista aninhada, o que significa que você pode incluir uma compreensão de lista dentro de outra. Um dos usos das compreensões de lista aninhada é que elas podem ser usadas para criar matrizes n-dimensionais.\n",
+    "\n",
+    "Metodo para entender List Comprehensions _**ANINHADAS**_:\n",
+    "* Crie o for:\n",
+    "    ```\n",
+    "    for i in range(2):\n",
+    "        for j in range(5):\n",
+    "            i + j\n",
+    "    ```\n",
+    "> Crie a compreensão de lista.\n",
+    "* Pegue o resultado i + j e adicione a lista.\n",
+    "    ```\n",
+    "    lista = [i + j]\n",
+    "    ```\t\n",
+    "* Pegue o primeiro for e adicione a lista.\n",
+    "    ```\n",
+    "    lista = [i + j for i in range(2)]\n",
+    "    ```\n",
+    "* Pegue o segundo for e adicione a lista.\n",
+    "    ```\n",
+    "    lista = [i + j for i in range(2) for j in range(5)]\n",
+    "    ```\n",
+    "Esta pronta a list comprehension aninhada, o resultado é:\n",
+    "    ```\n",
+    "    [0, 1, 2, 3, 4, 1, 2, 3, 4, 5]\n",
+    "    ```"
    ]
   },
   {
@@ -292,19 +317,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 1, 2]\n"
+      "[0, 1, 2, 3, 4, 1, 2, 3, 4, 5]\n"
      ]
     }
    ],
    "source": [
-    "matriz = [i+j for i in range(2) for j in range(2)]\n",
+    "matriz = [i+j for i in range(2) for j in range(5)]\n",
     "\n",
     "print(matriz)"
    ]
