add os.startfile para abrir arquivo

--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -2433,20 +2433,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "from openpyxl import Workbook\n",
@@ -2462,8 +2451,8 @@
     "\n",
     "wb.save('salarios.xlsx')\n",
     "\n",
-    "\n",
-    "os.system(\"start EXCEL.EXE salarios.xlsx\")\n",
+    "os.startfile('salarios.xlsx')\n",
+    "# os.system(\"start EXCEL.EXE salarios.xlsx\")\n",
     "# os.system(\"open -a 'path/Microsoft Excel.app' 'path/file.xlsx'\")"
    ]
   }
