atualiando tutorial Numpy

--- a/Numpy/numpy.ipynb
+++ b/Numpy/numpy.ipynb
@@ -7,8 +7,92 @@
     "# Numpy\n",
     "O pacote Numpy possui um poderoso objeto array multidimensional, que nos permite realizar um conjunto bastante amplo de operações numéricas, sem a necessidade de utilização de laços for.\n",
     "\n",
-    "1. [loadtxt( )](#loadtxt)\n",
-    "1. [savetxt( )](#savetxt)"
+    "1. [Metodos e funções Numpy](#Metodos-e-funções-Numpy)\n",
+    "    1. [arange( )](#arange)\n",
+    "    1. [array( )](#array)\n",
+    "    1. [.dtype](#dtype)\n",
+    "    1. [loadtxt( )](#loadtxt)\n",
+    "    1. [.shape](#shape)\n",
+    "1. [Trabalhando com Numpy](#Trabalhando-com-Numpy)\n",
+    "    1. [Desempenho Numpy vs lista Python](#Desempenho-Numpy-vs-lista-Python)\n",
+    "    1. [Operações com Numpy](#Operacoes_com_Numpy)\n",
+    "        1. [Operações entre array Numpy e constantes](#array_Numpy_e_constantes)\n",
+    "        1. [Operações entre arrays Numpy](#operacoes_entre_arrays_Numpy)\n",
+    "        1. [Operações entre arrays Numpy de duas dimensões](#operacoes_entre_arrays_Numpy_duas_dimencoes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metodos e funções Numpy<a class=\"anchor\" id=\"Metodos-e-funções-Numpy\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## arange( )<a class=\"anchor\" id=\"arange\"></a>\n",
+    "\n",
+    "Igual ao range( ), o arange( ) cria um array de números inteiros, com um intervalo especificado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import arange\n",
+    "\n",
+    "arange(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## array( )<a class=\"anchor\" id=\"array\"></a>\n",
+    "\n",
+    "* Diferente das listas do Python, que podem conter tipos variados em uma mesma sequência, arrays Numpy suportam somente um tipo de dado por vez."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "# .Transformando uma lista em um array Numpy\n",
+    "\n",
+    "km = array([10, 20, 30, 40, 50])\n",
+    "print(f'{km = }')\n",
+    "print(f'{type(km) = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## .dtype<a class=\"anchor\" id=\"dtype\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "# .Verificando o tipo do array\n",
+    "\n",
+    "km = array([10, 20, 30, 40, 50])\n",
+    "print(f'{km = }')\n",
+    "print(f'{type(km) = }')\n",
+    "print(f'{km.dtype = }')"
    ]
   },
   {
@@ -38,6 +122,172 @@
    "source": [
     "anos = np.loadtxt('carros-anos.txt', dtype=int)\n",
     "anos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## .shape<a class=\"anchor\" id=\"shape\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "\n",
+    "print(f'{km.shape = }')\n",
+    "\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "print(f'{dados.shape = }')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trabalhando com Numpy<a class=\"anchor\" id=\"Trabalhando-com-Numpy\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Desempenho Numpy vs lista Python<a class=\"anchor\" id=\"Desempenho-Numpy-vs-lista-Python\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import arange\n",
+    "\n",
+    "np_array = arange(1000000)\n",
+    "py_list = list(range(1000000))\n",
+    "\n",
+    "%time for _ in range(100): np_array *=2\n",
+    "\n",
+    "%time for _ in range(100): py_list = [x * 2 for x in py_list]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operações com Numpy<a class=\"anchor\" id=\"Operacoes_com_Numpy\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operações entre array Numpy e constantes<a class=\"anchor\" id=\"array_Numpy_e_constantes\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "# .Lista com km e anos de veiculos (ambas tem o mesmo tamanho!)\n",
+    "\n",
+    "km = [44410., 5712., 37123., 0., 25757.]\n",
+    "anos = [2003, 1991, 1990, 2019, 2006]\n",
+    "\n",
+    "# .veja que a lista não suporta a operação\n",
+    "idade = 2019 - anos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "\n",
+    "# .veja que array numpy suporta a operação\n",
+    "idade = 2019 - anos\n",
+    "idade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operações entre arrays Numpy<a class=\"anchor\" id=\"operacoes_entre_arrays_Numpy\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "idade = 2019 - anos\n",
+    "\n",
+    "km_media = km / idade\n",
+    "\n",
+    "km_media"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operações entre arrays Numpy de duas dimensões<a class=\"anchor\" id=\"operacoes_entre_arrays_Numpy_duas_dimencoes\"></a>\n",
+    "\n",
+    "![array_duas_dimensões](array_duas_dimencoes.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "\n",
+    "dados = array([km, anos])\n",
+    "# .Array de duas linhas e cinco colunas\n",
+    "print(dados)\n",
+    "\n",
+    "print(f'\\n{dados.shape = }')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# .Para acessar os arrays fazemos slice como em listas\n",
+    "print(f'\\n{dados[0] = }')\n",
+    "print(f'\\n{dados[1] = }')\n",
+    "\n",
+    "km_media = dados[0] / (2021 - dados[1])\n",
+    "km_media"
    ]
   }
  ],
