Add seleção e fatiamento com Numpy

--- a/Numpy/numpy.ipynb
+++ b/Numpy/numpy.ipynb
@@ -18,7 +18,9 @@
     "    1. [Operações com Numpy](#Operacoes_com_Numpy)\n",
     "        1. [Operações entre array Numpy e constantes](#array_Numpy_e_constantes)\n",
     "        1. [Operações entre arrays Numpy](#operacoes_entre_arrays_Numpy)\n",
-    "        1. [Operações entre arrays Numpy de duas dimensões](#operacoes_entre_arrays_Numpy_duas_dimencoes)\n"
+    "        1. [Operações entre arrays Numpy de duas dimensões](#operacoes_entre_arrays_Numpy_duas_dimencoes)\n",
+    "    1. [Seleção/Fatiamento com Numpy](#Selecao_com_Numpy)\n",
+    "    1. [Indexação com array booleano no Numpy](#indexacao_bool_com_Numpy)\n"
    ]
   },
   {
@@ -288,6 +290,129 @@
     "\n",
     "km_media = dados[0] / (2021 - dados[1])\n",
     "km_media"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Seleção/Fatiamento com Numpy<a class=\"anchor\" id=\"Selecao_com_Numpy\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "# .Array de duas linhas e cinco colunas\n",
+    "print(dados)\n",
+    "\n",
+    "# Podemos selecionar por [linha, coluna] ou [linha][coluna]\n",
+    "print(f'\\n{dados[0, 0] = }')\n",
+    "print(f'\\n{dados[0][0] = }')\n",
+    "print(f'\\n{dados[1][4] = }')\n",
+    "print(f'\\n{dados[1] = }')\n",
+    "print(f'\\n{dados[0] = }')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import arange\n",
+    "\n",
+    "# . Fatiamento de arrays\n",
+    "\n",
+    "contador = arange(10)\n",
+    "print(f'{contador = }')\n",
+    "print(f'{contador[1:5] = }')\n",
+    "print(f'{contador[1:8:2] = }')\n",
+    "print(f'{contador[::2] = }')\n",
+    "print(f'{contador[:10] = }')\n",
+    "print(f'{contador[5:] = }')\n",
+    "print(f'{contador[-1:-3] = }')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "# .Fatiando arrays multidimensionais (Podemos fazer seleção por [linha, coluna])\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "\n",
+    "print(f'{dados = }\\n')\n",
+    "# Linha 0 coluna de 0 a 3\n",
+    "print(f'{dados[0, 0:3] = }')\n",
+    "# Linha 0 e 1 coluna de 0 a 3\n",
+    "dados2 = dados[0:3, 0:3]\n",
+    "print(f'\\ndados[0:3, 0:3]\\n{dados[0:3, 0:3]}')\n",
+    "\n",
+    "print(f'\\n{dados2[1,2] = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Indexação com array booleano no Numpy<a class=\"anchor\" id=\"indexacao_bool_com_Numpy\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import arange\n",
+    "\n",
+    "contador = arange(10)\n",
+    "print(f'{contador = }')\n",
+    "\n",
+    "contador_maior_5 = contador > 5\n",
+    "print(f'\\ncontador_maior_5\\n{contador_maior_5}')\n",
+    "\n",
+    "contador_maior_5 = contador[contador > 5]\n",
+    "print(f'\\ncontador_maior_5\\n{contador_maior_5}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "# Pegar os valores de km e anos dos veículos com ano maior que 2000\n",
+    "print(f'\\ndados\\n{dados}')\n",
+    "\n",
+    "# dados[:,] Selecionando as duas linhas. , dados[1] > 2000 Selecionando a colunas que linha 2 maior que 2000\n",
+    "print(f'\\ndados[:, dados[1] > 2000]\\n{dados[:, dados[1] > 2000]}')"
    ]
   }
  ],
